apps/home/maybe/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: maybe
spec: {}
status: {}
