apps/home/maybe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: maybe
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: maybe
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: maybe
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
