apps/home/maybe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maybe-ingress-traefik
  namespace: maybe
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: maybe.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: maybe-tailscale
#   namespace: maybe
# spec:
#   ingressClassName: tailscale
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: web
#                 port:
#                   number: 3000
#   tls:
#     - hosts:
#         - maybe.deer-truck.ts.net
